# speciator

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  config.toml  entrypoint.sh  filtered_metrics.csv  pyproject.toml  requirements.txt  speciator-library-builder.def  speciator-lite.def  speciator.def  speciator.py  speciator.runscript.sh
.github/workflows/: push-main-to-public.yml
bactinspector/: __init__.py  commands.py  create_kleborate_species_info.py  dataframe_parsing_functions.py  mash_functions.py  run_bactinspector.py  utility_functions.py
bactinspector/data/: all_complete_bacteria_refseq.k21s1000.species.distance_and_length_metrics.pqt  all_complete_bacteria_refseq.k21s1000.species.distance_and_length_metrics.tsv  taxon_info.pqt
examples/: Kleborate.k21s1000.species.csv  Zooshikella.k21s1000.species.csv  Zooshikella.k21s1000.txt  columns.txt  ecoli_ERR435527.json
src/speciator/: __init__.py  build_space.py  cat_lineage_parquet.py  generate_lineages.py  kleborate.py  library_stats.py  lineages.py  linking.py  mash_functions.py  metrics.py  ncbi_utils.py  representatives.py  run_library_builder.py  run_speciator.py  run_split_library.py  search.py
tests/: test_library_stats.py  test_lineages.py  test_linking.py  test_search.py  test_search_shards.py  test_split_library.py
utils/: convert_csv_to_parquet.py  convert_parquet_to_csv.py  convert_taxon_codes_to_parquet.py  download-files.sh  format_converter.py  prepare_libraries.py
